<resources>
    <string name="app_name">Aplicativo de Teste</string>
    <string name="titulo_form_cadastro">Cadastra-se</string>
    <string name="titulo_form_login">Login do Usuário</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="texto_botao_cadastrar">Cadastrar</string>
    <string name="texto_botao_entrar">Entrar</string>
    <string name="texto_botao_deslogar">Deslogar</string>
    <string name="texto_botao_atualizar">Atualizar</string>
    <string name="texto_botao_deletar">Deletar</string>
    <string name="texto_botao_gravar">Gravar</string>
    <string name="texto_botao_ler">Ler Dados</string>
    <string name="texto_tela_cadastro">Não tem uma conta? Cadastra-se agora mesmo!</string>

</resources>